--- a/hypotenuse.css
+++ b/hypotenuse.css
@@ -1,9 +1,9 @@
 :root{
   --primary-navcolor:#A12568;
+  --seconday-color:#3B185F;
 }
 body{
   margin: 0;
-  text-align: center;
 }
 .nav-class{
   background-color: var(--primary-navcolor);
@@ -32,19 +32,59 @@ li{
 .link-active,.about{
   font-weight: bold;
 }
+.formula{
+  background-color: var(--primary-navcolor);
+  color: white;
+  width: 100%;
+  height: 5%;
+  padding: 1rem;
+  text-align: center;
+  border-bottom-right-radius:3rem;
+  border-top-left-radius: 3rem;
+  font-size: large;
+  margin-bottom: 2rem;
+}
 label{
   font-size: 1rem;
 }
+.container{
+  margin: auto auto 7rem;
+  width: 40%;
+  text-align: left;
+  font-family: cursive;
+  color: var(--seconday-color);
+}
+h1{
+  text-align: center;
+  color: var(--seconday-color);
+}
 .input-box{
   display: block;
-  margin: 1rem auto;
+  margin: 0.2rem auto 1rem;
+  border: 2px solid var(--primary-navcolor);
   border-radius: 0.5rem;
   outline: none;
   padding: 0.5rem;
+  width: 100%;
 }
 #hypotenuse-btn{
   padding: 0.5rem;
   font-size: large;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
+  border: 2px solid white;
+  cursor: pointer;
+  color: white;
+  background-color: var(--primary-navcolor);
   outline: none;
+  margin: 1rem auto;
+  display: block;
+  font-family: cursive;
+}
+#hypotenuse-btn:hover{
+  background-color: #E63E6D;
+}
+#output{
+  font-size: large;
+  text-align: center;
+  font-weight: bold;
 }
