--- a/isTriangle.css
+++ b/isTriangle.css
@@ -45,6 +45,18 @@ h1{
   text-align: center;
   color: #3B185F;
 }
+.formula{
+  background-color: var(--primary-navcolor);
+  color: white;
+  width: 100%;
+  height: 5%;
+  padding: 1rem;
+  text-align: center;
+  border-bottom-right-radius:3rem;
+  border-top-left-radius: 3rem;
+  font-size: large;
+  margin-bottom: 2rem;
+}
 .input-box{
   display: block;
   margin: 0.2rem auto 1rem;
@@ -73,4 +85,5 @@ h1{
 #output{
   font-size: large;
   text-align: center;
+  font-weight: bold;
 }
