--- a/quiz.css
+++ b/quiz.css
@@ -1,5 +1,6 @@
 :root{
   --primary-navcolor:#A12568;
+  --seconday-color:#3B185F;
 }
 body{
   margin: 0;
@@ -32,9 +33,54 @@ li{
 .link-active,.about{
   font-weight: bold;
 }
+h1{
+  text-align: center;
+  color: var(--seconday-color);
+}
+.marks-info{
+  background-color: var(--primary-navcolor);
+  color: white;
+  width: 100%;
+  height: 5%;
+  padding: 1rem;
+  text-align: center;
+  border-top-right-radius:3rem;
+  border-top-left-radius: 3rem;
+  font-size: large;
+  margin-bottom: 2rem;
+}
+.container{
+  margin: auto auto 7rem;
+  width: 40%;
+  text-align: left;
+  font-family: cursive;
+  color: var(--seconday-color);
+}
+.question-div{
+  border: 2px solid var(--seconday-color);
+  padding: 1rem;
+  margin-bottom: 0.5rem;
+  border-top-left-radius:1rem;
+  border-bottom-right-radius: 2rem;
+
+}
 #submit-btn{
   padding: 0.5rem;
   font-size: large;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
+  border: 2px solid white;
+  cursor: pointer;
+  color: white;
+  background-color: var(--primary-navcolor);
   outline: none;
+  margin: 1rem auto;
+  display: block;
+  font-family: cursive;
+}
+#submit-btn:hover{
+  background-color: #E63E6D;
+}
+#output{
+  font-size: large;
+  text-align: center;
 }
