--- a/hypotenuse.css
+++ b/hypotenuse.css
@@ -48,7 +48,7 @@ label{
   font-size: 1rem;
 }
 .container{
-  margin: auto auto 7rem;
+  margin: auto auto 4rem;
   width: 40%;
   text-align: left;
   font-family: cursive;
@@ -66,6 +66,9 @@ h1{
   outline: none;
   padding: 0.5rem;
   width: 100%;
+  font-family: cursive;
+  font-weight: bold;
+  font-size: medium;
 }
 #hypotenuse-btn{
   padding: 0.5rem;
@@ -87,4 +90,19 @@ h1{
   font-size: large;
   text-align: center;
   font-weight: bold;
+}
+.footer-class{
+  margin : 10% auto 3%;
+  text-align: center;
+}
+.links{
+  margin: 1% 1% 0;
+}
+.copywrite{
+  padding: 0 0 1rem;
+}
+img{
+  display: inline;
+  width: 1rem;
+  height:1%;
 }
