--- a/quiz.css
+++ b/quiz.css
@@ -84,3 +84,18 @@ h1{
   font-size: large;
   text-align: center;
 }
+.footer-class{
+  margin : 10% auto 3%;
+  text-align: center;
+}
+.links{
+  margin: 1% 1% 0;
+}
+.copywrite{
+  padding: 0 0 1rem;
+}
+img{
+  display: inline;
+  width: 1rem;
+  height:1%;
+}
